--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "@omnsight/clients",
   "version": "1.0.1",
   "description": "TypeScript clients for Omniscent services",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/your-github-username/omnclient.git"
+  },
   "main": "src/index.ts",
   "types": "src/index.ts",
   "scripts": {
