--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "TypeScript clients for Omniscent services",
   "repository": {
     "type": "git",
-    "url": "https://github.com/your-github-username/omnclient.git"
+    "url": "https://github.com/omnsight/omnclient"
   },
   "main": "src/index.ts",
   "types": "src/index.ts",
