Update build workflow (#9) #patch
* Add src as auto commit destination for generated clients

* Add write permission for build workflow

* auto: chore: 更新 TypeScript 客户端

---------

Co-authored-by: bouncingmaxt <212165011+bouncingmaxt@users.noreply.github.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,6 +10,9 @@ jobs:
   generate-clients:
     runs-on: ubuntu-latest
 
+    permissions:
+      contents: write
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -31,5 +34,5 @@ jobs:
         with:
           commit_message: "auto: chore: 更新 TypeScript 客户端"
           commit_options: '--no-verify'
-          file_pattern: 'generated/'
+          file_pattern: 'src/'
           branch: ${{ github.ref_name }}
