--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,6 +6,10 @@ on:
       - 'main'
   workflow_dispatch: # 允许手动触发
 
+permissions:
+  contents: write
+  id-token: write
+
 jobs:
   generate-clients:
     runs-on: ubuntu-latest
@@ -20,19 +24,23 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '18'
+          node-version: '20'
           cache: 'npm'
 
       - name: Install dependencies
         run: npm ci
 
       - name: Generate clients
-        run: npm run build
+        run: |
+          git config --global user.email "ci-build@omni.com"
+          git config --global user.name "ci build"
+          npm run build
+          npm version patch
 
       - name: Commit and push changes
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
           commit_message: "auto: chore: 更新 TypeScript 客户端"
           commit_options: '--no-verify'
-          file_pattern: 'src/'
+          file_pattern: 'src/ package*.json'
           branch: ${{ github.ref_name }}
