Compile ts code to js and ship instead of raw ts code

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,6 +34,7 @@ jobs:
         run: |
           git config --global user.email "ci-build@omni.com"
           git config --global user.name "ci build"
+          npm run generate
           npm run build
           npm version patch
 
