--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
   "name": "@omnsight/clients",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "TypeScript clients for Omniscent services",
   "repository": {
     "type": "git",
     "url": "https://github.com/omnsight/omnclient"
   },
-  "main": "src/index.ts",
-  "types": "src/index.ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "files": ["dist"],
   "scripts": {
-    "build": "node scripts/generate-clients.js",
-    "prepack": "npm run build"
+    "generate": "node scripts/generate-clients.js",
+    "build": "tsc"
   },
   "dependencies": {
     "axios": "^1.6.0"
@@ -21,9 +22,6 @@
     "node-fetch": "^3.3.2",
     "adm-zip": "^0.5.10"
   },
-  "files": [
-    "src/**/*"
-  ],
   "keywords": [
     "omnsight",
     "api",
